--- a/Assignment9_WebVisualizations/style.css
+++ b/Assignment9_WebVisualizations/style.css
@@ -43,7 +43,13 @@ p {
                font-size: x-large;
                color: white;
 }
+.pull-right {
+  padding-right: 1in;
+}
 
+.pull-left {
+  padding-left: 1in;
+}
 /* Here we define a navbar style that will ONLY be applied at screen sizes below 480 pixels */
 @media (max-width: 480px) {
   .navbar {
